# todo

./: .gitignore  README.md
db/: Cargo.toml  README.md
db/migrations/2023-01-05-031100_create_todos/: down.sql  up.sql
db/src/: lib.rs  models.rs  schema.rs
todo_backend/: Cargo.toml
todo_backend/entity/: Cargo.toml
todo_backend/entity/src/: tasks.rs
todo_backend/migration/: Cargo.toml
todo_backend/migration/src/: lib.rs  m20230226_212703_create_tasks_table.rs  m20230305_164028_create_users_table.rs
todo_backend/public/: container.css  todo_list.css
todo_backend/src/: main.rs  task_routes.rs
todo_backend/templates/: base.html.tera  edit_task_form.html.tera  todo_list.html.tera
