[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-trait = { version = "0.1" }
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "macros"
]